@@ -23,6 +23,7 @@ Minor Changes:
  
 Fixes:
  * Bug in randword() and extract() fixed. [MG]
+ * Memory leak in new match code closed. [SW]
 
 Version 1.8.3 patchlevel 12                     Feb 07, 2010
 
